--- a/about.html
+++ b/about.html
@@ -21,9 +21,22 @@
         </div>
         <div class = "response">
             <h2>Project Motivation</h2>
+            <h5>Our motivation was to see how BC's demographics have changed throughout
+              the past half-century. We thought that this would be interesting because it is important 
+              to reflect on where BC has come from and how it has changed over time to see its own growth and trends, 
+              as well as have a more holistic view of its history. </h5>
         </div>
         <div class = "response">
             <h2>Data Processing</h2>
+            <h5>What we did to collect our data was visit Boston College's Admissions website
+          to find factbooks on the school for each academic year. We decided to focus and compare trends
+          between every 5 academic years starting with 1976. From this we plugged the information into Excel
+          files and then converted them into CSVs. Our data included enrollment numbers, gender distribution,
+          ethnic distribution, racial distribution, as well numbers between US States and the four different
+          schools at Boston College, which are: Carroll School of Management (CSOM), Morrissey College of Arts
+          and Sciences (MCAS), Lynch School of Education (LSOE) and Connell School of Nursing (CSON). After processing
+          this data, we started to examine the trends in order to determine which visualizations would be appropriate in
+          our design processes.</h5>
         </div>
         <div class = "response">
             <h2>Design Processes</h2>
