--- a/about.html
+++ b/about.html
@@ -24,7 +24,10 @@
             <h5>Our motivation was to see how BC's demographics have changed throughout
               the past half-century. We thought that this would be interesting because it is important 
               to reflect on where BC has come from and how it has changed over time to see its own growth and trends, 
-              as well as have a more holistic view of its history. </h5>
+              as well as have a more holistic view of its history. We recognize that the best way to keep a community like BC
+          evolving and growing is to continue to search for a diverse population of students when admitting new classes. Hopefully
+          this website can help provide some context on the areas that Boston College should improve in to maintain this level of 
+              intellectual stimulation on campus. </h5>
         </div>
         <div class = "response">
             <h2>Data Processing</h2>
