--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@
             </div>
             <div class = "row map2">
                 <div class = "column">
-                    <p><strong>Population Distribution of the United States as a Whole in 2020</strong>
-                    <div class = "map-us"></div>
+                    <!-- <p><strong>Population Distribution of the United States as a Whole in 2020</strong>
+                    <div class = "map-us"></div> -->
+                    <p id = "map-comp">In 2020 1.5% of the US population is from Alabama compared to 0.2% of the BC student body</p>
+                  >
                 </div>
             </div>
             <h4>Geographic Distribution Patterns</h4>
