ethnicity line chart

--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
                         increasingly over-represented within the BC community </strong>compared with the USA overall to an approximately 
                         100% difference in 2020. <strong>The Black and Hispanic populations have been consistently under-represented at 
                         BC by reasonably consistent margins, </strong> and it is evident that this problem has shown no signs of decreasing.</h5>
+                <br><br>
+                </div>
+                
+            </div>
+            <div class = "row ethnicity-compare">
+                <div class = "column">
+                    <br><br>
+                    <h4>title</h4>
+                    <h5>description</h5>
+                </div>
+                <div class = "column">
+                    <div id = "ethnicity-line-chart"></div>
                 </div>
             </div>
          </div>     
