--- a/about.html
+++ b/about.html
@@ -37,8 +37,11 @@
           files and then converted them into CSVs. Our data included enrollment numbers, gender distribution,
           ethnic distribution, racial distribution, as well numbers between US States and the four different
           schools at Boston College, which are: Carroll School of Management (CSOM), Morrissey College of Arts
-          and Sciences (MCAS), Lynch School of Education (LSOE) and Connell School of Nursing (CSON). After processing
-          this data, we started to examine the trends in order to determine which visualizations would be appropriate in
+          and Sciences (MCAS), Lynch School of Education (LSOE) and Connell School of Nursing (CSON). For additional 
+          points of comparison, we also gathered some population data from the United States in general as well as 
+          data from peer institutions of BC including Boston University, Georgetown, Northeastern, and Notre Dame. 
+          This additional data was taken from the US Census Bureau and the Common Data Sets of each institution respectively.
+          After processing the data, we started to examine the trends in order to determine which visualizations would be appropriate in
           our design processes.</h5>
         </div>
         <div class = "response">
