--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h5>Below we examine how the Boston College (BC) undergraduatepopulation has changed by ethnicity, gender, geographical region, and 
                 international status over the past 45 years. We also compared the ethnicity and gender distribution at 
                 BC to other peer institutions such as Georgetown, Notre Dame, Boston University, and Northeastern based 
-                off of their 2020 demographics.<br><i>***All of the information included below is based on undergraduate students only and is gathered from the BC Factbook Archives.</i></h5>  
+                off of their 2020 demographics.<br><br><i>** All of the information included below is based on undergraduate students only and is gathered from the BC Factbook Archives. **</i></h5>  
         </div>
         <div class = "viz-container">
             <h3>Changes in Gender Distribution</h3>
