--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             <div class = "row ethnicity-compare">
                 <div class = "column">
                     <br><br>
-                    <h4>title</h4>
-                    <h5>description</h5>
+                    <h4>Low Representation of Black and Hispanic Students</h4>
+                    <h5> Though the population of White students has decreased and begun to reflect the overall US population more, the representation of Black and Hispanic Students at BC has made little improvement.</h5>
                 </div>
                 <div class = "column">
                     <div id = "ethnicity-line-chart"></div>
