--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class = "row ethnicity-compare">
                 <div class = "column">
                     <br><br>
-                    <h4>Low Representation of Black and Hispanic Students</h4>
+                    <h4>Underrepresented:Black & Hispanic Students</h4>
                     <h5> Though the population of White students has decreased and begun to reflect the overall US population more, the representation of Black and Hispanic Students at BC has made little improvement.</h5>
                 </div>
                 <div class = "column">
