--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
         <div class = "viz-container">
             <div class = "row international">
                 <div class = "column">
-                    <br><br><br><br>
+                    <br><br>
                     <h4>International Student Distribution</h4>
-                    <h5>In addition to the increase in diversity in terms of geographic distribution of US-born students,<strong> the percent of international students at BC has increased considerably since 1976.</strong></h5>  
+                    <h5>In addition to the increase in diversity in terms of geographic distribution of US-born students,<strong> the percent of international students at BC has increased considerably since 1976.</strong> This trend of an increase in international students coincides with increase in students from parts of the United States outside of the Northeast. This shows that BC's student body is increasingly coming from different areas of the world.</h5>  
                 </div>
                 <div class = "column">
                     <div id = "intl-line-chart"></div>
