--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class = "title">
             <h1>Has BC Become More Diverse? <br><i style="font-size:30px;color:#b29d6c;">A look into the past 45 years at Boston College</i></h1>
-            <h5>Below we examine how the Boston College (BC) undergraduatepopulation has changed by ethnicity, gender, geographical region, and 
+            <h5>Below we examine how the Boston College (BC) undergraduate population has changed by ethnicity, gender, geographical region, and 
                 international status over the past 45 years. We also compared the ethnicity and gender distribution at 
                 BC to other peer institutions such as Georgetown, Notre Dame, Boston University, and Northeastern based 
                 off of their 2020 demographics.<br><br><i>** All of the information included below is based on undergraduate students only and is gathered from the BC Factbook Archives. **</i></h5>  
@@ -93,7 +93,7 @@
                 <div class = "column">
                     <br><br><br>
                     <h4>"Two or More Races" Breakdown</h4>
-                    <h5>Furthermore, BC introduced a new "two or more races" category into its statistics in 2010. The visualization to the right breaks down the percent of students selecting the "two or more races" category who identify the given ethnicity as one of them. A high number of those identifying as two or more races identified either Hispanic or White as one them, which could possibly skew some of the patterns seen in the distribution of these ethnicities.</h5>
+                    <h5>Furthermore, BC introduced a new "two or more races" category into its statistics in 2010. The visualization to the right breaks down the percent of students selecting the "two or more races" category who identify the given ethnicity as one of them. A high number of those identifying as two or more races identified as either Hispanic or White, which could possibly skew some of the patterns seen in the distribution of these ethnicities.</h5>
                 </div>
                 <div class = "column">
                     <p><i>Adjust the year slider below to begin!</i></p>
