--- a/about.html
+++ b/about.html
@@ -46,6 +46,12 @@
         </div>
         <div class = "response">
             <h2>Design Processes</h2>
+          For our design processes, we decided that some of the best visuals to have would be interactive. Many of the
+          variables amongst students can be correllated and it's important for readers to be able to learn about relationships
+          between the data. While the variables of gender, ethnicity and race might not be able to explain one another, there may be
+          correlations in those variables within the individual schools of Boston College, as well as other inferences and conclusions
+          that can be drawn by the reader regarding the population make-up of the university.
+  
         </div>
         <div class = "response">
             <h2>Showcase Video</h2>
