--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         been greater than the number of male students over the past 45 years.  The difference was the most 
                         pronounced between 1980 and 1990, which interestingly corresponds very closely to the higher total 
                         number of students enrolled in those years.  Thus, it seems that in these years of higher enrollment, 
-                        the majority of the additional enrolled students were female rather than male. Since then,the gap 
+                        the majority of the additional enrolled students were female rather than male. Since then, the gap 
                         between the number of male and female students narrowed to a nearly constant difference until 2010, 
                         since when it has begun to widen once again.</h5>
                 </div>
@@ -80,8 +80,8 @@
         </div>
         <div class = "viz-container">
             <h3>Changes in Ethnic Distribution</h3>
-            <h4>Distribution Overview</h4>
-            <h5>We next turn to an analysis of the ethnic distribution of students enrolled in Boston College since 1976. In contrast to the more consistent gender patterns of BC, BC has generally become a more ethnically diverse school in the past 45 years, yet the change has been slow.</h5>
+            <h4>Ethnic Distribution Overview</h4>
+            <h5>We next turn to an analysis of the ethnic distribution of students enrolled in Boston College since 1976. In contrast to the more consistent gender patterns of the school, BC has generally become a more ethnically diverse school in the past 45 years, yet the change has been slow.</h5>
             <div class = "row ethnicity">
                 <div id = "stacked-area"></div>
                 <h5><strong>Boston College has been, and continues to be, a majority-White school, though the White majority has decreased 
@@ -114,7 +114,8 @@
                         and has been for the duration of the past 45 years. Additionally, <strong>the Asian population of BC has been 
                         increasingly over-represented within the BC community </strong>compared with the USA overall to an approximately 
                         100% difference in 2020. <strong>The Black and Hispanic populations have been consistently under-represented at 
-                        BC by reasonably consistent margins, </strong> and it is evident that this problem has shown no signs of decreasing.</h5>
+                        BC by reasonably consistent margins. </strong> While it is evident that the problem with Black representation
+                        has shown no signs of decreasing, Hispanic representation has slightly improved in the last 5 years.</h5>
                 <br><br>
                 </div>
                 
@@ -168,14 +169,15 @@
                 </div>
             </div>
             <h4>Geographic Distribution Patterns</h4>
-            <h5>In 1976, the geographic distribution of students was fairly limited. The vast majority of students came from the Northeast, 
+            <h5>In 1980, the geographic distribution of students was fairly limited. The vast majority of students came from the Northeast, 
                 with more than 70% of the student body coming from either Massachusetts, New York, New Jersey, or Connecticut. In contrast, 
                 the rest of the country's regions were under-represented, with Illinois and Ohio being the only two states outside 
                 of the Northeast with greater than 100 students. In 2020, however, we can see that this pattern has begun to change. 
                 <strong>While the majority of students still seem to come from the Northeast (New York and Massachusetts continue to stand out), 
                 the overall distribution has become much more even.</strong> The change is particularly noticeable for states such as California, 
                 Texas, Florida, Minnesota, and Washington. However, there are still areas of the country which are under-represented, 
-                such as midwest states outside of the Great Lakes region and the majority of southern states.</h5>
+                such as midwest states outside of the Great Lakes region and the majority of southern states. On the whole, however, the geographic
+                distribution of students has grown much closer to that of the United States population in its entirety.</h5>
         </div>
         <div class = "viz-container">
             <div class = "row international">
@@ -211,7 +213,7 @@
                 <div class = "column">
                     <br><br><br>
                     <h4>Gender Demographics</h4>
-                    <h5><strong>Almost all of the peer institutions that we examined shared BC's majority-female demographics, </strong>with both BU and Georetown having an even higher female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
+                    <h5><strong>Almost all of the peer institutions that we examined shared BC's majority-female demographics, </strong>with both BU and Georetown having an even larger female majority. The only peer institution which is majority male in 2020 is Notre Dame, while Northeastern is the closest to being truly 50-50 in terms of gender.</h5>  
                     <div id = "stacked-bar2"></div>
                 </div>
             </div>
@@ -222,7 +224,7 @@
             <h5>
                 BC has consistently become more diverse in the gender, ethnic and international student distribution since 1975, 
                 though not by a huge margin. The gender distribution has evened out with a decreasing proportion of females and 
-                an increasing proportion of men. The percentage of white students has slowly decreased from 94% to 65% with a 
+                an increasing proportion of men. The percentage of white students has slowly decreased from 94% to 65%, alongside a 
                 large increase in Asian students and a small increase of Black, Hispanic and multicultural students. International 
                 students have made a large impact in BC’s diversity with an increase from 1.09% to 7.7% of the student body. In 
                 comparison with other private and neighboring universities, BC has similar gender distributions and a 
