--- a/about.html
+++ b/about.html
@@ -31,14 +31,13 @@
         </div>
         <div class = "response">
             <h2>Data Processing</h2>
-            <h5>What we did to collect our data was visit Boston College's Admissions website
-          to find factbooks on the school for each academic year. We decided to focus and compare trends
-          between every 5 academic years starting with 1976. From this we plugged the information into Excel
-          files and then converted them into CSVs. Our data included enrollment numbers, gender distribution,
+            <h5>Our data is collected from the Boston College's Admissions website
+          and the factbook archives for each academic year at Boston College. We gathered data from these factbooks in 5 academic year intervals, starting with 1976. From this we plugged relevant information into Excel
+          files and converted them into CSVs. Our data included enrollment numbers, gender distribution,
           ethnic distribution, racial distribution, as well numbers between US States and the four different
           schools at Boston College, which are: Carroll School of Management (CSOM), Morrissey College of Arts
           and Sciences (MCAS), Lynch School of Education (LSOE) and Connell School of Nursing (CSON). For additional 
-          points of comparison, we also gathered some population data from the United States in general as well as 
+          points of comparison, we also gathered population data for the United States as well as 
           data from peer institutions of BC including Boston University, Georgetown, Northeastern, and Notre Dame. 
           This additional data was taken from the US Census Bureau and the Common Data Sets of each institution respectively.
           After processing the data, we started to examine the trends in order to determine which visualizations would be appropriate in
