--- a/about.html
+++ b/about.html
@@ -50,7 +50,9 @@
           variables amongst students can be correllated and it's important for readers to be able to learn about relationships
           between the data. While the variables of gender, ethnicity and race might not be able to explain one another, there may be
           correlations in those variables within the individual schools of Boston College, as well as other inferences and conclusions
-          that can be drawn by the reader regarding the population make-up of the university.</h5>
+          that can be drawn by the reader regarding the population make-up of the university. For this, it was important to let the 
+            reader be able to press or hover on a part of the visualization that will lead them to another visualization. We made sure
+            to incorporate different charts (bar charts, area charts, maps) with captivating, yet accessible graphics.</h5>
   
         </div>
         <div class = "response">
