--- a/about.html
+++ b/about.html
@@ -57,6 +57,12 @@
         </div>
         <div class = "response">
             <h2>Showcase Video</h2>
+            <div class = "showcase">
+                <video width="700" height="500" controls>
+                    <source src="showcase.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+            </div>
         </div>
         <a class = "button back" href = "index.html">Back</a>
     </div>
