--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
             <h1>Project Information</h1>
             <h3 class = "members">Group Members: Christina MacKenzie, Grace Myers, Anna Bolger, and Anthony Manev</h3>
         </div>
+        <a class = "button back" href = "index.html">Back</a>
         <div class = "response">
             <h2>Project Motivation</h2>
             <h5>Our motivation was to see how BC's demographics have changed throughout
@@ -72,6 +73,6 @@
                 </video>
             </div>
         </div>
-        <a class = "button back" href = "index.html">Back</a>
+        <a class = "button contributions" href = "contributions.html">See Contributions</a>
     </div>
 </body>
